--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -28,6 +28,7 @@
 <center>
   <h1>TiShare</h1><br>
   <img id="qrcode"><br>
+  <h3 id="code"></h3>
   <img id="image" width="500px">
   <video id="video" style="display: none;" controls></video>
   <audio id="audio" style="display: none;" controls></audio><br>
