--- a/beta/tishare/receive.html
+++ b/beta/tishare/receive.html
@@ -29,7 +29,7 @@
 <center>
   <h1>TiShare</h1><br>
   <div class="container">
-    <input type="tel" id="code" class="form-control" onkeyup="enterCode(this.value)" autofocus>
+    <input type="tel" class="form-control" onkeyup="enterCode(this.value)" autofocus>
   </div>
 </center>
 
