--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -29,6 +29,9 @@
   <h1>TiShare</h1><br>
   <img id="qrcode"><br>
   <h3 id="code"></h3>
+  <div id="receive" style="display: none;" class="container">
+    <input type="tel" class="form-control" onkeyup="enterCode(this.value)" placeholder="Code">
+  </div> 
   <img id="image" width="500px">
   <video id="video" style="display: none;" controls></video>
   <audio id="audio" style="display: none;" controls></audio><br>
@@ -39,9 +42,6 @@
   </div>
   <span id="success" style="display: none;" class="glyphicon glyphicon-check"></span><br>
 </center>
-<div id="receive" style="display: none;" class="container">
-    <input type="tel" class="form-control" onkeyup="enterCode(this.value)" autofocus>
-</div> 
 <script src="qrious.min.js"></script>
 <script src="main.js"></script>
 
