--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -29,6 +29,7 @@
   <h1>TiShare</h1><br>
   <img id="qrcode"><br>
   <h3 id="code"></h3>
+  <button onclick="document.getElementById('receive').style = '';" class="btn btn-primary">Enter TiShare Code</button>
   <div id="receive" style="display: none;" class="container">
     <input type="tel" class="form-control" onkeyup="enterCode(this.value)" placeholder="Code">
   </div> 
@@ -36,7 +37,6 @@
   <video id="video" style="display: none;" controls></video>
   <audio id="audio" style="display: none;" controls></audio><br>
   <div id="upload" class="container">
-    <button onclick="document.getElementById('receive').style = '';" class="btn btn-primary">Enter TiShare Code</button><br>
     <button style="width: 300px; height: 150px;" class="btn btn-primary" onclick="chooseFile()">Upload</button><br>
     <input type="text" class="form-control lg" onchange="shareLink(this.value)" placeholder="Share A Link">
   </div>
