--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -29,7 +29,7 @@
   <h1>TiShare</h1><br>
   <img id="qrcode"><br>
   <h3 id="code"></h3>
-  <div id="receive" style="display: none;" class="container" style="text-align: center">
+  <div id="receive" style="" class="container" style="text-align: center">
   <button onclick="document.getElementById('receive').style = '';" class="btn btn-primary" style="display: block">Enter TiShare Code</button>
     <input type="tel" class="form-control" onkeyup="enterCode(this.value)" placeholder="Code">
   </div> 
