--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -30,8 +30,8 @@
   <img id="qrcode"><br>
   <h3 id="code"></h3>
   <div id="receive" style="" class="container" style="text-align: center">
-  <button onclick="document.getElementById('receive').style = '';" class="btn btn-primary" style="display: block">Enter TiShare Code</button>
-    <input type="tel" class="form-control" onkeyup="enterCode(this.value)" placeholder="Code">
+  <button onclick="document.getElementById('receive-input').style = '';" class="btn btn-primary" style="display: block">Enter TiShare Code</button>
+    <input type="tel" id="receive-input" class="form-control" onkeyup="enterCode(this.value)" placeholder="Code">
   </div> 
   <img id="image" width="500px">
   <video id="video" style="display: none;" controls></video>
