--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tiri Touch</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 </head>
 <body>
 <center>
