--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -28,5 +28,7 @@
   <input type="tel" onfocusout="focus(this)" onkeyup="typeNum(this)" style="opacity: 0;" autofocus>
 </center>
 <script src="main.js"></script>
+<script src="../js/tiri.js"></script>
+<script src="../js/speech.js"></script>
 </body>
 </html>
