--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -25,7 +25,7 @@
   <br>
 
   <p id="possible"></p>
-  <input type="tel" onfocusout="focus(this)" onkeyup="typeNum(this)" style="opacity: 0;" autofocus>
+  <input type="tel" onfocusout="focus(this)" onkeyup="typeNum(this)" onchange="execTiri();" style="opacity: 0;" autofocus>
 </center>
 <script src="main.js"></script>
 <script src="../js/tiri.js"></script>
