--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -8,7 +8,7 @@
 <body>
 <center>
   <br>
-  <h1>Tiri Touch</h1>
+  <h1 id="tiri">Tiri Touch</h1>
   <br>
   <button onclick="predict(' ')">1</button>
   <button onclick="predict('ABC')">ABC</button>
