--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -30,5 +30,6 @@
 <script src="main.js"></script>
 <script src="../js/tiri.js"></script>
 <script src="../js/speech.js"></script>
+<script src="../js/annyang.js"></script>
 </body>
 </html>
