--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -25,7 +25,7 @@
   <br>
 
   <p id="possible"></p>
-  <input type="tel" onfocusout="focus(this)" onkeyup="typeNum(this)" onchange="execTiri();" style="opacity: 0;" autofocus>
+  <button onclick="askTiri()">Ask Tiri</button>
 </center>
 <script src="../js/speech.js"></script>
 <script src="../js/annyang.js"></script>
