--- a/beta/tiritouch/index.html
+++ b/beta/tiritouch/index.html
@@ -4,6 +4,7 @@
   <title>Tiri Touch</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <link rel="SHORTCUT ICON" href="../other resources/favicon.ico">
 </head>
 <body>
 <center>
