--- a/beta/index.html
+++ b/beta/index.html
@@ -242,7 +242,25 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <a class="buttons"><center><span style="font-size:30px; padding: 10px;" class="glyphicon glyphicon-plus"></span></center>
     </a>
   </nav>
+    <div class="modal fade" id="delete-tile-modal" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Delete Tile</h4>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this tile? This action cannot be undone.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" onclick="localStorage.deleteTiles = true;">Delete</button>
+        </div>
+      </div>
+    </div>
   </div>
+ </div>
+</div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
