--- a/beta/index.html
+++ b/beta/index.html
@@ -181,7 +181,9 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
-  
+<div id="multitasking" style="display: none;">
+  <iframe src="index.html" id="app-multi-1" style="width: 100vw; height: 50vh;"></iframe>
+  <iframe src="index.html" id="app-multi-2" style="width: 100vw; height: 50vh;"></iframe>
  <div style="display: none;" id="tidocs">
     <h3>TiDocs</h3><br>
     
