--- a/beta/index.html
+++ b/beta/index.html
@@ -184,6 +184,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 <div id="multitasking" style="display: none;">
   <iframe src="index.html" id="app-multi-1" style="width: 100vw; height: 50vh;"></iframe>
   <iframe src="index.html" id="app-multi-2" style="width: 100vw; height: 50vh;"></iframe>
+  </div>
  <div style="display: none;" id="tidocs">
     <h3>TiDocs</h3><br>
     
