--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,7 @@
     <title>Home - TiMedia</title>
   </head>
   <body id="body" class="task">
+  <div id="timedia-nav-bar">
     <nav class="navbar navbar-inverse" id="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -59,7 +60,7 @@
         </div>
       </div>
     </nav>
-
+   </div>
 <div class="container">
 <div id="home">
   <script>
