--- a/beta/index.html
+++ b/beta/index.html
@@ -183,7 +183,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
 <div id="multitasking" style="display: none;">
-  <iframe src="index.html?multitasking=true" id="app-multi-1" style="width:100%; height: 50vh;"></iframe>
+  <iframe src="index.html?app=7&multitasking=true" id="app-multi-1" style="width:100%; height: 50vh;"></iframe>
   <iframe src="index.html?app=3&multitasking=true" id="app-multi-2" style="width:100%; height: 50vh;"></iframe>
   </div>
  <div style="display: none;" id="tidocs">
