--- a/beta/index.html
+++ b/beta/index.html
@@ -236,7 +236,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
        </div>
        <div id="tiles-searchbox" class="nobullet" style="display: none;">
        </div>
-       <nav class="fab-container">  
+       <nav id="tiles-add-button" class="fab-container">  
     <a href="?app=10" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-bookmark"></center></span></a>
     
     <a href="?app=4" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-th-list"></center></span></a>
