--- a/beta/index.html
+++ b/beta/index.html
@@ -184,7 +184,33 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 </div>
 <div id="multitasking" style="display: none;">
   <iframe src="index.html?app=7&multitasking=true" id="app-multi-1" style="width:100%; height: 50vh;"></iframe>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Switch Apps in top space
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a onclick="selectMultiApp("?app=3&multitasking=true, 1)>TiDocs</a></li>
+    <li><a onclick="selectMultiApp("?app=4&multitasking=true, 1)>TiSheets</a></li>
+    <li><a onclick="selectMultiApp("?app=10&multitasking=true, 1)>TiBookmarks</a></li>
+    <li><a onclick="selectMultiApp("?app=7&multitasking=true, 1)>Tiles</a></li>
+    <li><a onclick="selectMultiApp("?app=2&multitasking=true, 1)>TiChat</a></li>
+    <li><a onclick="selectMultiApp("?app=6&multitasking=true, 1)>Settings</a></li>
+    <li><a onclick="selectMultiApp("?app=8&multitasking=true, 1)>New App</a></li>
+  </ul>
+</div>
   <iframe src="index.html?app=3&multitasking=true" id="app-multi-2" style="width:100%; height: 50vh;"></iframe>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Switch Apps in bottom space
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a onclick="selectMultiApp("?app=3&multitasking=true, 2)>TiDocs</a></li>
+    <li><a onclick="selectMultiApp("?app=4&multitasking=true, 2)>TiSheets</a></li>
+    <li><a onclick="selectMultiApp("?app=10&multitasking=true, 2)>TiBookmarks</a></li>
+    <li><a onclick="selectMultiApp("?app=7&multitasking=true, 2)>Tiles</a></li>
+    <li><a onclick="selectMultiApp("?app=2&multitasking=true, 2)>TiChat</a></li>
+    <li><a onclick="selectMultiApp("?app=6&multitasking=true, 2)>Settings</a></li>
+    <li><a onclick="selectMultiApp("?app=8&multitasking=true, 2)>New App</a></li>
+  </ul>
+</div>
   </div>
  <div style="display: none;" id="tidocs">
     <h3>TiDocs</h3><br>
