--- a/beta/index.html
+++ b/beta/index.html
@@ -188,13 +188,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Switch Apps in top space
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a onclick='selectMultiApp("?app=3&multitasking=true", 1)'>TiDocs</a></li>
-    <li><a onclick='selectMultiApp("?app=4&multitasking=true", 1)'>TiSheets</a></li>
-    <li><a onclick='selectMultiApp("?app=10&multitasking=true", 1)'>TiBookmarks</a></li>
-    <li><a onclick='selectMultiApp("?app=7&multitasking=true", 1)'>Tiles</a></li>
-    <li><a onclick='selectMultiApp("?app=2&multitasking=true", 1)'>TiChat</a></li>
-    <li><a onclick='selectMultiApp("?app=6&multitasking=true", 1)'>Settings</a></li>
-    <li><a onclick='selectMultiApp("?app=8&multitasking=true", 1)'>New App</a></li>
+    <li><a onclick='selectMultiApp("?app=3&multitasking=true", 1)'>TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=4&multitasking=true", 1)'>TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=10&multitasking=true", 1)'>TiBookmarks <span class="glyphicon glyphicon-bookmark"></a></li>
+    <li><a onclick='selectMultiApp("?app=7&multitasking=true", 1)'>Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=2&multitasking=true", 1)'>TiChat <span class="glyphicon glyphicon-send"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=6&multitasking=true", 1)'>Settings <span class="glyphicon glyphicon-cog"></a></li>
+    <li role="separator" class="divider"></li>
+    <li><a onclick='selectMultiApp("?app=8&multitasking=true", 1)'>New App <span class="glyphicon glyphicon-plus"></span></a></li>
   </ul>
 </div>
   <br>
@@ -203,13 +204,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Switch Apps in bottom space
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a onclick='selectMultiApp("?app=3&multitasking=true", 2)'>TiDocs</a></li>
-    <li><a onclick='selectMultiApp("?app=4&multitasking=true", 2)'>TiSheets</a></li>
-    <li><a onclick='selectMultiApp("?app=10&multitasking=true", 2)'>TiBookmarks</a></li>
-    <li><a onclick='selectMultiApp("?app=7&multitasking=true", 2)'>Tiles</a></li>
-    <li><a onclick='selectMultiApp("?app=2&multitasking=true", 2)'>TiChat</a></li>
-    <li><a onclick='selectMultiApp("?app=6&multitasking=true", 2)'>Settings</a></li>
-    <li><a onclick='selectMultiApp("?app=8&multitasking=true", 2)'>New App</a></li>
+    <li><a onclick='selectMultiApp("?app=3&multitasking=true", 2)'>TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=4&multitasking=true", 2)'>TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=10&multitasking=true", 2)'>TiBookmarks <span class="glyphicon glyphicon-bookmark"></a></li>
+    <li><a onclick='selectMultiApp("?app=7&multitasking=true", 2)'>Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+    <li><a onclick='selectMultiApp("?app=2&multitasking=true", 2)'>TiChat <span class="glyphicon glyphicon-send"></a></li>
+    <li><a onclick='selectMultiApp("?app=6&multitasking=true", 2)'>Settings <span class="glyphicon glyphicon-cog"></a></li>
+    <li role="separator" class="divider"></li>
+    <li><a onclick='selectMultiApp("?app=8&multitasking=true", 2)'>New App <span class="glyphicon glyphicon-plus"></span></a></li>
   </ul>
 </div>
   </div>
