--- a/beta/index.html
+++ b/beta/index.html
@@ -229,6 +229,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+<button id="tidocs-reader" style="display: none;" onclick="docReader()" class="btn btn-primary">Reader View</button>
 </div>
   
      <div id="settings" style="display: none;">
