--- a/beta/index.html
+++ b/beta/index.html
@@ -219,7 +219,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 </div>
   </div>
  <div style="display: none;" id="tidocs">
-    <h3>TiDocs</h3><br>
+    <h3 id="tidocs-header">TiDocs</h3><br>
     
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
