--- a/beta/index.html
+++ b/beta/index.html
@@ -17,7 +17,7 @@
   </head>
   <body id="body" class="task">
   <div id="timedia-nav-bar">
-    <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
+    <nav class="navbar navbar-inverse" id="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -82,7 +82,6 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 }
   </script>
   <center>
-    <br>
     <div class="jumbotron">
       <h1 id="welcome-to-timedia"></h1>
     </div>
