--- a/beta/index.html
+++ b/beta/index.html
@@ -109,7 +109,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <h1 id="tiri"></h1><br>
       <div class="container">
 <div id="tiri-bubbles">
-  <span id="you-say" class="message-send">You haven't sent any messages yet</span>
+  <span id="you-say" class="message-send">Nothing Yet</span>
   <span id="tiri-says" class="message-return"></span>
   </div>
   <div id="send">
