--- a/beta/index.html
+++ b/beta/index.html
@@ -83,9 +83,11 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 }
   </script>
   <center>
+   <div class="container"
     <div class="jumbotron">
       <h3 id="welcome-to-timedia"></h3>
     </div>
+  </div>
     <script>
       document.getElementById('welcome-to-timedia').innerHTML = "Hello, " + localStorage.name
     </script>
