--- a/beta/index.html
+++ b/beta/index.html
@@ -83,7 +83,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 }
   </script>
   <center>
-   <div class="container"
+   <div class="container">
     <div class="jumbotron">
       <h3 id="welcome-to-timedia"></h3>
     </div>
