--- a/beta/index.html
+++ b/beta/index.html
@@ -83,11 +83,9 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 }
   </script>
   <center>
-   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" style="padding:500px:">
       <h3 id="welcome-to-timedia"></h3>
     </div>
-  </div>
     <script>
       document.getElementById('welcome-to-timedia').innerHTML = "Hello, " + localStorage.name
     </script>
