--- a/beta/look.html
+++ b/beta/look.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="other resources/style.css" crossorigin="anonymous">
   <link rel="stylesheet" href="other resources/tiles.css" crossorigin="anonymous">
   <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
 </head>
 <body>
 <center>
