--- a/beta/index.html
+++ b/beta/index.html
@@ -103,8 +103,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <h1 id="tiri"></h1><br>
       <div class="container">
 <div id="tiri-bubbles">
-  <span id="you-say" class="message-send">Nothing Yet</span>
-  <span id="tiri-says" class="message-return"></span>
+  <span id="tiri-says" class="message-return">Welcome</span>
   </div>
   <div id="send">
     <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
