--- a/beta/index.html
+++ b/beta/index.html
@@ -102,7 +102,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <center>
       <h1 id="tiri"></h1><br>
       <div class="container">
-<div id="tiri-bubbles">
+<div id="bubbles">
   <span class="message-return">Welcome</span>
   </div>
   <div id="send">
