--- a/beta/index.html
+++ b/beta/index.html
@@ -107,6 +107,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
   <div id="send">
     <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
+    <center>
+      <button onclick="clearTiriHistory()" class="btn btn-primary">Clear Tiri Conversation</button>
   </div>
 </div>
   </div>
