--- a/beta/index.html
+++ b/beta/index.html
@@ -104,7 +104,10 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <div class="container">
 <div id="bubbles">
   <span class="message-return">Welcome</span>
-  </div>
+</div>
+<div id="tiri-bubbles-timer" style="display: none;">
+  <div id="tiri-timer" class="message-return">' + localStorage.ts + '</div>
+</div>
   <div id="send">
     <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
     <center>
