--- a/beta/index.html
+++ b/beta/index.html
@@ -106,7 +106,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <span class="message-return">Welcome</span>
 </div>
 <div id="tiri-bubbles-timer" style="display: none;">
-  <div id="tiri-timer" class="message-return">' + localStorage.ts + '</div>
+  <div id="tiri-timer" class="message-return"></div>
 </div>
   <div id="send">
     <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
