--- a/beta/index.html
+++ b/beta/index.html
@@ -16,7 +16,7 @@
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Home - TiMedia</title>
   </head>
-  <body id="body" class="task">
+  <body id="body" class="task" onload="hideTimer()">
   <div id="timedia-nav-bar">
     <nav class="navbar navbar-inverse" id="navbar">
       <div class="container-fluid">
