--- a/beta/look.html
+++ b/beta/look.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
   <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
 </head>
-<body>
+<body onload="hideTimer()">
 <center>
     <div class="container">
 <div id="bubbles">
