--- a/beta/index.html
+++ b/beta/index.html
@@ -111,7 +111,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <div id="send">
     <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
     <center>
-      <button onclick="clearTiriHistory()" class="btn btn-primary">Clear Tiri Conversation</button>
+      <button id="clear-tiri-history" onclick="clearTiriHistory()" class="btn btn-primary">Clear Tiri Conversation</button>
   </div>
 </div>
   </div>
