--- a/beta/index.html
+++ b/beta/index.html
@@ -196,7 +196,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
          
          Bar Color<br>
         <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
-        <button onclick="updateSettings()" class="btn btn-success">Save</button><br><br>
+        <button onclick="updateSettings()" class="btn btn-success">Save</button>
          <br><br>
        </div>
        <br>
