--- a/beta/index.html
+++ b/beta/index.html
@@ -213,7 +213,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
          
          Bar Color<br>
         <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
-        <button onclick="updateSettings()" class="btn btn-success">Save</button>
+        <button onclick="updateSettings()" class="btn btn-success">Save</button><br>
+        <input class="form-control" type="tel" id="set-pin">
          <br><br>
        </div>
        <br>
