--- a/beta/login.html
+++ b/beta/login.html
@@ -76,5 +76,6 @@
     <script src="js/db.js"></script>
     <script src="js/main.js"></script>
     <script src="js/login-tismile.js"></script>
+    <script src="js/login-pin.js"></script> 
   </body>
 </html>
