--- a/beta/login.html
+++ b/beta/login.html
@@ -60,6 +60,7 @@
       <input type="password" id="login-password" class="form-control"><br>
       <p id="error" style="color: red;"></p>
       <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button><br><br>
+      <input id="pin" class="form-control" onchange="loginWithPin();" placeholder="pin">
     </div>
     <div id="login-tismile" style="display: none;">
       <h3>Login with TiSmile</h3>
