--- a/beta/index.html
+++ b/beta/index.html
@@ -214,7 +214,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
          Bar Color<br>
         <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
         <button onclick="updateSettings()" class="btn btn-success">Save</button><br>
-        <input class="form-control" type="tel" onchange="setPin();" id="set-pin">
+        <input class="form-control" placeholder="Pin" type="tel" onchange="setPin();" id="set-pin">
          <br><br>
        </div>
        <br>
