--- a/beta/login.html
+++ b/beta/login.html
@@ -59,6 +59,7 @@
       Password<br>
       <input type="password" id="login-password" class="form-control"><br>
       <p id="error" style="color: red;"></p>
+      <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button><br><br>
     </div>
     <div id="login-tismile" style="display: none;">
       <h3>Login with TiSmile</h3>
