--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -38,7 +38,8 @@
   <audio id="audio" style="display: none;" controls></audio><br>
   <div id="upload" class="container">
     <button style="width: 300px; height: 150px;" class="btn btn-primary" onclick="chooseFile()">Upload</button><br>
-    <input type="text" class="form-control lg" onchange="shareLink(this.value)" placeholder="Share A Link">
+    Share A Link<br>
+    <input type="text" class="form-control lg" onchange="shareLink(this.value)" value="https://">
   </div>
   <span id="success" style="display: none;" class="glyphicon glyphicon-check"></span><br>
 </center>
