--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -38,11 +38,13 @@
   <audio id="audio" style="display: none;" controls></audio><br>
   <div id="upload" class="container">
     <button style="width: 300px; height: 150px;" class="btn btn-primary" onclick="chooseFile()">Upload</button><br>
+    </center>
     Share A Link<br>
+  <center>
     <input type="text" class="form-control lg" onchange="shareLink(this.value)" value="https://">
   </div>
   <span id="success" style="display: none;" class="glyphicon glyphicon-check"></span><br>
-</center>
+  </center>
 <script src="qrious.min.js"></script>
 <script src="main.js"></script>
 
