--- a/beta/index.html
+++ b/beta/index.html
@@ -82,10 +82,6 @@
 <div class="container">
 <div id="home">
   <script>
-       $(".hcb-comment-tb").removeClass('hcb-comment-tb');
-       $('.inputfile').removeClass('inputfile');
-       $( "label[for='hcb_file']" ).text( "Insert Image" ).addClass('btn').addClass('btn-primary');
-    
     function changeName() {
       document.getElementById('hcb_form_name').value = localStorage.name;
       document.getElementById('hcb_form_name').disabled = true;   
@@ -108,7 +104,12 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <h5 id="mutemessage"></h5>
    <div id="HCB_comment_box">Loading comments...</div>
   <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-  </div>
+  <script>
+        $(".hcb-comment-tb").removeClass('hcb-comment-tb');
+       $('.inputfile').removeClass('inputfile');
+       $( "label[for='hcb_file']" ).text( "Insert Image" ).addClass('btn').addClass('btn-primary');
+    </script>
+    </div>
   </center>
 <div style="display: none;" id="messages">
     <h3>TiChat</h3><br>
