--- a/beta/index.html
+++ b/beta/index.html
@@ -329,9 +329,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <script src="js/settings.js"></script>
     <script src="js/messages.js"></script> 
     <script>
-        $(".hcb-comment-tb").removeClass('hcb-comment-tb');
-       $('.inputfile').removeClass('inputfile');
-       $( "label[for='hcb_file']" ).text( "Insert Image" ).addClass('btn').addClass('btn-primary');
+       customImageUpload();
       </script>  
    </div>
   </body>
