--- a/beta/index.html
+++ b/beta/index.html
@@ -329,7 +329,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <script src="js/settings.js"></script>
     <script src="js/messages.js"></script> 
     <script>
-       customImageUpload();
+       setInterval(customImageUpload, 0);
       </script>  
    </div>
   </body>
