--- a/beta/login.html
+++ b/beta/login.html
@@ -30,7 +30,7 @@
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Login - TiMedia</title>
   </head>
-  <body>
+  <body onload="preventHacking();">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
