--- a/beta/signup.html
+++ b/beta/signup.html
@@ -1,3 +1,4 @@
+<script src="nohacking.js"></script>
 <center>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVpLfZV5nGrtlHwFBRyJ14vfPakwSMhxEG_AxYuMbA4FTCBA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </center>
