--- a/beta/look.html
+++ b/beta/look.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="other resources/tiles.css" crossorigin="anonymous">
   <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
   <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
+  <script src="js/nohacking.js"></script>
 </head>
 <body onload="hideTimer()">
 <center>
