--- a/beta/index.html
+++ b/beta/index.html
@@ -19,6 +19,7 @@
      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
      <meta name="theme-color" content="#ffffff">
      <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+     <script src="js/nohacking.js"></script>
     <!-- Required meta tags -->
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
