--- a/beta/index.html
+++ b/beta/index.html
@@ -302,6 +302,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
      <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
      <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
      <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
+     <input class="form-control" onchange="tiriMini(this.value)" placeholder="Start typing or speak now...">
     </ul>
   </nav>
   <!--end of context menu -->
