--- a/beta/index.html
+++ b/beta/index.html
@@ -302,9 +302,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
      <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
      <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
      <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
-     <div class="container"
-     <input class="form-control" id="tiri-mini-box" onchange="tt();" placeholder="Start typing or speak now..." autofocus> <!-- autofocus works more reliably and faster than .focus()-->
-     </div>
+     <input class="form-control" style="width: 50%" id="tiri-mini-box" onchange="tt();" placeholder="Start typing or speak now..." autofocus> <!-- autofocus works more reliably and faster than .focus()-->
     </ul>
   </nav>
   <!--end of context menu -->
