Removes 404 page hack glitch

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="beta/other resources/cmenu.css" crossorigin="anonymous">
 <link rel="stylesheet" href="beta/other resources/tiri.css" crossorigin="anonymous">
 <title>404 - TiMedia</title>
-<script src="js/nohacking.js"></script>
+<script src="https://proudloyaltier.github.io/timedia/beta/js/nohacking.js"></script>
 </head>
 <body>
 <center>
