--- a/beta/index.html
+++ b/beta/index.html
@@ -157,7 +157,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 </div>
  <div style="display: none;" id="tidocs">
     <h3 id="tidocs-header">TiDocs</h3><br>
-    <h5 id='no-access-doc' style='display: none;'></h5><br>
+    <h5 id='no-access-doc' style='display: none;'>You Do Not Have Access To This Document</h5><br>
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
