--- a/beta/index.html
+++ b/beta/index.html
@@ -156,7 +156,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
  <div style="display: none;" id="tidocs">
-    <h3 id="tidocs-header">TiDocs</h3><br>
+    <h3 id="tidocs-header">TiDocs</h3>
     <h5 id='no-access-doc' style='display: none;'>You Do Not Have Access To This Document</h5><br>
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
