--- a/beta/index.html
+++ b/beta/index.html
@@ -221,6 +221,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3 id="tisheets-header" >TiSheets</h3>
+  <h5 id='tisheets-no-access' style="display: none;">You Do Not Have Access To This Spreadsheet</h5>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <style>
      table, th, td {
