--- a/beta/index.html
+++ b/beta/index.html
@@ -156,8 +156,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
  <div style="display: none;" id="tidocs">
-    <h3 id="tidocs-header">TiDocs</h3>
-    <h5 id='no-access-doc' style='display: none;'>You Do Not Have Access To This Document</h5><br>
+    <h3 id="tidocs-header">TiDocs</h3><br>
+    
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
@@ -221,7 +221,6 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3 id="tisheets-header" >TiSheets</h3>
-  <h5 id='tisheets-no-access' style="display: none;">You Do Not Have Access To This Spreadsheet</h5>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <style>
      table, th, td {
