--- a/beta/index.html
+++ b/beta/index.html
@@ -157,7 +157,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 </div>
  <div style="display: none;" id="tidocs">
     <h3 id="tidocs-header">TiDocs</h3><br>
-    
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
+    <button style='float: left; border-radius: 0px;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
+    <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+    <br><br>
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
@@ -221,6 +228,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3 id="tisheets-header" >TiSheets</h3>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
+  <button style='float: left; border-radius: 0px;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
+  <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+  <br><br>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <style>
      table, th, td {
