--- a/beta/index.html
+++ b/beta/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
+    <link rel="stylesheet" href="other resources/valentines.css">
     <title>Home - TiMedia</title>
   </head>
   <body id="body" class="task" onload="hideTimer()">
