--- a/beta/index.html
+++ b/beta/index.html
@@ -210,8 +210,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
-       File Name<br>
-      <input class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><br>
+      <input placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><br>
        <div id="tiles-tiles" class="nobullet">
          You have no Tiles.
        </div>
