--- a/beta/index.html
+++ b/beta/index.html
@@ -167,6 +167,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
       <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
       <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
       <br><br><br><br>
       </div>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
