--- a/beta/index.html
+++ b/beta/index.html
@@ -160,14 +160,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <div id="create">
       <input id="docsTitle" class="form-control lg" value="Untitled Document"><br>
       <div class='formatting-bar'>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
-      <button style='float: left; border-radius: 0px;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
-      <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
       <br><br><br><br>
       </div>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
