--- a/beta/index.html
+++ b/beta/index.html
@@ -172,7 +172,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       </div>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
 
-      <button onclick="saveDoc()" class="btn btn-primary">Save</button>
+      <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
