--- a/beta/index.html
+++ b/beta/index.html
@@ -270,7 +270,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </tr>
 </table><br>
    <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
-   <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
+   <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
    <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
    <button class="btn btn-primary" id="tisheets-reader" onclick="sheetReader()" style="display: none;">Reader View</button>
  <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
