--- a/beta/index.html
+++ b/beta/index.html
@@ -170,7 +170,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveDoc()"><span class="glyphicon glyphicon-floppy-save"></span></button>
       <br><br><br><br>
       </div>
-      <h5 style="outline: none;" id="tidocs-content" contenteditable="true" autofocus></h5><br>
+      <h5 style="outline: none;" id="content" contenteditable="true" autofocus></h5><br>
 
       <button onclick="saveDoc(); window.location.href = '?app=7';" class="btn btn-primary">Save</button>
   </div>
@@ -329,6 +329,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="js/home.js"></script>
+    <script src="js/cmenu.js"></script>
     <script src="js/main.js"></script>
     <script src="js/tismile.js"></script>
     <script src="js/annyang.js"></script>
@@ -344,7 +345,6 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
     <script src="js/db.js"></script>
     <script src="other resources/bootbox.min.js"></script>
-    <script src="js/cmenu.js"></script>
     <script src="js/docs.js"></script>
     <script src="js/sheets.js"></script>
     <script src="js/tiles.js"></script>
